# Gg-healthcare-ml-projectx

./: .gitignore  README.md  pyproject.toml  requirements.txt  scheduler.py
app/: main.py  model_loader.py  routes.py  schemas.py
database/: db_connection.py  models.py  queries.sql
frontend/: index.html
ml/: evaluate.py  predict.py  preprocess.py  train.py
notebooks/: analysis.ipynb
scripts/: clean.py  ingest.py  load.py  test_connection.py
